Added family relation check method. Added compression to stored data.